--- a/gateway.yaml
+++ b/gateway.yaml
@@ -31,3 +31,7 @@ spring:
           uri: http://localhost:8004
           predicates:
             - Path=/transaction/**
+        - id: yanki
+          uri: http://localhost:8009
+          predicates:
+            - Path=/yanki/**
