--- a/gateway.yaml
+++ b/gateway.yaml
@@ -39,3 +39,7 @@ spring:
           uri: http://localhost:8010
           predicates:
           - Path=/operation/**
+        - id: bootcoin
+          uri: http://localhost:8011
+          predicates:
+          - Path=/bootcoin/**
